# AppImage2desktop

./: .gitignore  README.md  README_cn.md  create_desktop_shortcut.py  main.py  pyproject.toml
appimage2desktop/: __init__.py  main.py  shortcut.py
